--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "vue-project",
-  "version": "0.0.0",
+  "name": "ilyaize",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "@intlify/unplugin-vue-i18n": "^1.4.0",
+    "firebase": "^10.4.0",
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.23",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10"
+    "daisyui": "^4.5.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^4.0.0"
   }
 }
