--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/tailwindcss": "^6.10.4",
     "daisyui": "^4.6.0",
     "nuxt": "^3.9.0",
+    "prettier": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "vue": "^3.4.6",
     "vue-router": "^4.2.5"
   },
